compiler/tests/liva/errors/e0001_duplicate_variable.liva
// Error Test: E0001 — Variable already defined in scope
// EXPECT: E0001
main() {
    let x = 10
    let x = 20
    print(x)
}
